Se agregaron algunos estilos para la pagina de inicio de la pagina, falta arreglar algunos detalles

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.2",
     "moment": "^2.29.2",
     "mysql": "^2.18.1",
+    "nes.css": "^2.3.0",
     "nodemon": "^2.0.15"
   }
 }
