--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.2",
     "mysql": "^2.18.1",
     "nes.css": "^2.3.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "sweetalert2": "^11.4.14"
   }
 }
