--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Raul Ivan",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
